@@ -1,29 +1,28 @@
 package ru.job4j.collection;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.is;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-public class DepartmentsTest {
+class DepartmentsTest {
 
     @Test
-    public void whenMissed() {
+    void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1", "k2/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k2", "k2/sk1");
         List<String> result = Departments.fillGaps(input);
-        assertThat(result, is(expect));
+        assertEquals(result, expect);
     }
 
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
-        assertThat(result, is(expect));
+        assertEquals(result, expect);
     }
 
     @Test
@@ -39,7 +38,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -51,7 +50,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2"
         );
         Departments.sortAsc(input);
-        assertThat(input, is(expect));
+        assertEquals(input, expect);
     }
 
     @Test
@@ -64,7 +63,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K1/SK2",
@@ -73,7 +72,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2"
         );
         Departments.sortAsc(input);
-        assertThat(input, is(expect));
+        assertEquals(input, expect);
     }
 
     @Test
@@ -89,7 +88,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
@@ -101,7 +100,7 @@ public class DepartmentsTest {
                 "K1/SK2"
         );
         Departments.sortDesc(input);
-        assertThat(input, is(expect));
+        assertEquals(input, expect);
     }
 
     @Test
@@ -115,7 +114,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2/SK1",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2",
@@ -125,6 +124,6 @@ public class DepartmentsTest {
                 "K1/SK2"
         );
         Departments.sortDesc(input);
-        assertThat(input, is(expect));
+        assertEquals(input, expect);
     }
 }
